[package]
name = "sensilo"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2021"

[dependencies]
anyhow = "1"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-svc = "0.24"
esp-idf-hal = "0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
shtcx = "0.11"
sgp30 = "0.3"
shared-bus = { version = "0.2", features = ["std"] }
veml6030 = { version = "0.1.2" }

[build-dependencies]
embuild = "0.31.0"

[features]
default = ["lux", "gas", "temp_humi"]
lux = []
gas = []
temp_humi = []
